# FO2-splitscreen

./: README.md  config.yaml  pyproject.toml  requirements.txt
c_fallback/: README.md  build.bat  d3d9_proxy.c
fo2_splitscreen/: __init__.py  __main__.py  cli.py  config.py  constants.py
fo2_splitscreen/input/: controller.py  input_config.py  keyboard_emulator.py
fo2_splitscreen/launcher/: game_config.py  instance_manager.py  process.py
fo2_splitscreen/memory/: addresses.py  patcher.py
fo2_splitscreen/network/: protocol.py  proxy.py  virtual_client.py  virtual_host.py
fo2_splitscreen/window/: manager.py  monitor.py
tests/: test_config.py  test_game_config.py  test_protocol.py
