[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fo2-splitscreen"
version = "0.1.0"
description = "FlatOut 2 splitscreen enabler - launch multiple instances with virtual LAN"
requires-python = ">=3.11"
dependencies = [
    "pymem>=1.13",
    "pygame>=2.5",
    "pyyaml>=6.0",
]

[project.scripts]
fo2-splitscreen = "fo2_splitscreen.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
